# ros2_jazzy_test

./: .claude-main-exclude  .dockerignore  .env.example  .gitignore  .main-keep-ours  CLAUDE.md  README.md  a01-prerequirements.sh  a02-about-project.sh  a02-robot-camera.sh  a03-vs-code-install.sh  a04-voice-precheck.sh  a06-Voice.sh  install.sh
backup/: a05-realsense02.sh  cuda-pytorch-install.sh  docker-install.sh  dsr-project-install.sh  dsr-project-install_25.sh  nvidia-driver-install.sh  python-dependency.sh  ros2-humble-desktop-main.sh  ros2-install.sh
cobot2_ws/cobot2_bringup/: package.xml  setup.cfg  setup.py
cobot2_ws/cobot2_bringup/launch/: bringup_all.launch.py
containers/: build-all.sh  docker-compose.yml  entrypoint.sh  fetch-images.sh
docs/: COMPATIBILITY.md  DEVELOPMENT_ROADMAP.md  MIGRATION_NOTES.md  SCRIPTING_GUIDELINES.md  TROUBLESHOOTING.md
resources/: activate.sh  apt-repo.sh  colcon-build.sh  config.sh  confirm.sh  cyclonedds.xml.in  dds-tuning.sh  docker-install.sh  dsr-project-install.sh  env-load.sh  host-python-deps.sh  install-resume-launcher.sh  interaction.sh  kernel-baseline.sh  network-static-ip.sh  nvidia-container-toolkit-install.sh  nvidia-driver-install.sh  orchestrate.sh  realsense-install.sh  realsense-ros-install.sh  realsense-sdk-install.sh  ros2-desktop-main.sh  ros2-install.sh  ros2-packages.sh  run-step.sh  state.sh  steps.sh  sysctl-cyclonedds.conf  unattended.sh  voice-env-check.sh  vscode-install.sh
scripts/: check-no-claude-on-main.sh  merge-to-main.sh
tasks/: lessons.md
viz/: README.md  live_detection.py  (+1 more)
(+30 files in other folders)
