<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cobot2_bringup</name>
  <version>0.0.0</version>
  <description>Cobot2 통합 bringup — 로봇 드라이버(dsr_bringup2) + RealSense + 애플리케이션 컨테이너를 한 번에 기동하는 launch. robot_control(실모션)은 포함하지 않는다(인프라 전용).</description>
  <maintainer email="rokey@todo.todo">rokey</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>dsr_bringup2</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>robot_control</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
